fixed category editor not showing properly when category is empty!

--- a/webapp/components/survey/CategoryDetails/CategoryDetails.scss
+++ b/webapp/components/survey/CategoryDetails/CategoryDetails.scss
@@ -7,6 +7,7 @@ $borderColor: $greyBorder;
   flex-direction: column;
   gap: 0.5rem;
   align-items: center;
+  height: 100%;
   width: 100%;
 }
 
